sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:31: error: ';' expected but 'while' found.
} while (change=true)
  ^AlgBubbleSort1:33: error: 'while' expected but '}' found.
} 
^